--- a/app/views/admins/_form.html.erb
+++ b/app/views/admins/_form.html.erb
@@ -22,6 +22,6 @@
     <%= f.password_field :password_confirmation, autocomplete: "off" ,class: "form-control"%>
   </div>
   <div class="actions">
-    <%= f.submit  "Guardar Datos de usuario" %>
+    <%= f.submit  "Guardar Datos de usuario" , "class"=>"ui-link ui-btn ui-btn-inline ui-shadow ui-corner-all"%>
   </div>
 <% end %>
