--- a/app/views/eventos/_form.html.erb
+++ b/app/views/eventos/_form.html.erb
@@ -67,6 +67,6 @@
       </div>
     </div>
     <div class="col-md-12">
-     <%= submit_tag "Enviar" %>
+     <%= submit_tag "Enviar" , "class"=>"ui-link ui-btn ui-btn-inline ui-shadow ui-corner-all"%>
      </div>
   <% end %>
