--- a/app/views/productos/_form.html.erb
+++ b/app/views/productos/_form.html.erb
@@ -50,7 +50,7 @@
     <%end%>
   </div>
   <div class="actions">
-    <%= f.submit "Guardar" %>
+    <%= f.submit "Guardar" , "class"=>"ui-link ui-btn ui-btn-inline ui-shadow ui-corner-all"%>
   </div>
 <% end %>
 </div>
