--- a/app/views/rols/_form.html.erb
+++ b/app/views/rols/_form.html.erb
@@ -21,7 +21,7 @@
     <%= f.number_field :precio_hora ,"required" => "required", "step"=>"any"%>
   </div>
   <div class="actions">
-    <%= f.submit "Guardar"%>
+    <%= f.submit "Guardar", "class"=>"ui-link ui-btn ui-btn-inline ui-shadow ui-corner-all"%>
   </div>
 <% end %>
 </div>
