--- a/app/views/venta/edit.html.erb
+++ b/app/views/venta/edit.html.erb
@@ -1,6 +1,5 @@
-<h1>Editing Ventum</h1>
-
+<%= link_to 'Mostrar Venta', @ventum, "data-role"=>"button","data-inline"=>"true" %>
+<%= link_to 'Regresar', venta_path,"data-role"=>"button","data-inline"=>"true"%>
 <%= render 'form' %>
-
-<%= link_to 'Show', @ventum %> |
-<%= link_to 'Back', venta_path %>
+<%= link_to 'Mostrar Venta', @ventum, "data-role"=>"button","data-inline"=>"true" %>
+<%= link_to 'Regresar', venta_path,"data-role"=>"button","data-inline"=>"true"%>
