--- a/app/views/venta/new.html.erb
+++ b/app/views/venta/new.html.erb
@@ -1,5 +1,4 @@
-<h1>Venta Nueva</h1>
-
+<%= link_to 'Regresar', venta_path,"data-role"=>"button","data-inline"=>"true"%>
 <%= render 'form' %>
 
-<%= link_to 'Regresar', venta_path %>
+<%= link_to 'Regresar', venta_path,"data-role"=>"button","data-inline"=>"true"%>
