--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -4,11 +4,12 @@
 @media(min-width:768px){.small{display:none}.navbar-toggle{display:none!important}a.page-scroll.ui-link{margin:5px;vertical-align:sub;}.menu_small{display:none}div.contenido{margin-top:70px}}
 @media(max-width:767px){.big,a.navbar-brand{display:none}div.header{margin-top:20px}.small>p{padding:0}a.page-scroll.ui-link{margin-top:15px;margin-bottom:15px;vertical-align:sub;color:#fff!important}a.page-scroll{width:100%!important;float:left}}a.navbar-brand{color:#fff!important}li{list-style-type:none}.navbar,.color-header{background-color: #C1272D!important;}li.page-scroll>a{color:"B3B3B3"!important;}
 ul.nav > li > a:hover {    color: gold!important;}ul.nav > li > a:active {    color: gold!important;}.logo{width: 50px;}form{max-width: 1000px;}
-@media(min-width: 1000px){.col-md-8{width: 80%!important;margin-right: 10%!important; margin-left: 10%!important;}.col-md-offset-2{margin: 0px;} }
 @media(min-width: 1400px){
 	.maximo{max-width: 1200px;margin: 0 auto!important;}
 }
-
+.topcien{
+	margin-top: 100px;
+}
 .cien{
 	width: 100%!important;
 }
