--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,5 +1,6 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
 
+<h2>Editar <%= resource_name.to_s.humanize %></h2>
+<%= link_to "Regresar", root_path, "class"=>"ui-link ui-btn ui-btn-inline ui-shadow ui-corner-all" %>
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= devise_error_messages! %>
 
@@ -13,27 +14,27 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
+    <%= f.label :password ,"Password nuevo"%> <i>(Deja el espacio en blanco si no deseas cambiarlo)</i><br />
     <%= f.password_field :password, autocomplete: "off" %>
   </div>
 
   <div class="field">
-    <%= f.label :password_confirmation %><br />
+    <%= f.label :password_confirmation,"Canfirma el nuevo Password" %><br />
     <%= f.password_field :password_confirmation, autocomplete: "off" %>
   </div>
 
   <div class="field">
-    <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
+    <%= f.label :current_password ,"Password actual"%> <i>(Se requeire tu password actual para poder proceder)</i><br />
     <%= f.password_field :current_password, autocomplete: "off" %>
   </div>
 
   <div class="actions">
-    <%= f.submit "Update" %>
+    <%= f.submit "Actualizar", "class"=>"ui-link ui-btn ui-btn-inline ui-shadow ui-corner-all" %>
   </div>
 <% end %>
 
-<h3>Cancel my account</h3>
+<h3>Cancel la cuenta</h3>
 
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
+<p><%= button_to "Cancelar mi cuenta", registration_path(resource_name), data: { confirm: "Estas seguro?" }, method: :delete , "class"=>"ui-link ui-btn ui-btn-inline ui-shadow ui-corner-all"%></p>
 
-<%= link_to "Back", :back %>
+<%= link_to "Regresar", root_path, "class"=>"ui-link ui-btn ui-btn-inline ui-shadow ui-corner-all" %>
