--- a/app/views/parcial/_menu.html.erb
+++ b/app/views/parcial/_menu.html.erb
@@ -3,7 +3,7 @@
 	<%= link_to "Registrar", new_admin_path, class: "green page-scroll"%>
 <%end%>
 <% if user_signed_in? %>
-	<li><%= link_to "Ventas", eventos_path, "class" => "page-scroll"%></li>
+	<li><%= link_to "Ventas", venta_path, "class" => "page-scroll"%></li>
 	<li><%= link_to 'Productos', productos_path, "class" => "page-scroll" %></li>
 	<%if current_user.is_admin?%>
 		<li><%= link_to 'Productos Padre', producto_padres_path, "class" => "page-scroll" %></li>
