--- a/app/views/venta/index.html.erb
+++ b/app/views/venta/index.html.erb
@@ -1,33 +1,42 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Listing Venta</h1>
+<h1 class="alert alert-danger center" >Ventas registradas</h1>
+<%= link_to 'Registrar venta', new_ventum_path, "data-role" => "button", "data-inline" => "true" %>
+<div class="col-md-12">
+  <form>
+      <input id="filterTable-input" data-type="search">
+  </form>
 
-<table>
-  <thead>
-    <tr>
-      <th>Cliente</th>
-      <th>Clave</th>
-      <th>Fecha</th>
-      <th>Iva</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @venta.each do |ventum| %>
+  <table class="table table-bordered ui-responsive" data-role="table" data-filter="true" data-input="#filterTable-input">
+    <thead>
       <tr>
-        <td><%= ventum.cliente %></td>
-        <td><%= ventum.clave %></td>
-        <td><%= ventum.fecha %></td>
-        <td><%= ventum.iva %></td>
-        <td><%= link_to 'Show', ventum %></td>
-        <td><%= link_to 'Edit', edit_ventum_path(ventum) %></td>
-        <td><%= link_to 'Destroy', ventum, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <th>Cliente</th>
+        <th>Clave</th>
+        <th>Fecha</th>
+        <th>Iva</th>
+        <th colspan="3"></th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
 
-<br>
-
-<%= link_to 'New Ventum', new_ventum_path %>
+    <tbody> 
+      <% @venta.each do |ventum| %>
+        <tr>
+          <td><%= ventum.cliente %></td>
+          <td><%= ventum.clave %></td>
+          <td><%= ventum.fecha %></td>
+          <td><%= ventum.iva %></td>
+          <td><%= link_to 'Show', ventum %></td>
+          <%if current_user.is_admin?%>
+            <td><%= link_to 'Edit', edit_ventum_path(ventum)%></td>
+          <%end%>
+          <td><%= link_to 'Destroy', ventum, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+</div>
+<script type="text/javascript">
+$(document).ready(function(){
+      window.name = "norefreshed";
+});
+</script>
