--- a/app/views/venta/show.html.erb
+++ b/app/views/venta/show.html.erb
@@ -1,4 +1,4 @@
-<div class="col-md-8">
+
 	<div class="col-md-12">
 		<div class="col-md-4 col-md-offset-3">
 	    	<%= image_tag("sos") %>
@@ -67,5 +67,4 @@
     <%= link_to ' Descargar Estimación',  ventum_path(request.parameters.merge({:format => :xlsx})), :onclick => "$('#index').submit()","data-role" => "button","data-inline" => "true", "data-theme" => "b", "download"=>"fa-download", "data-ajax"=>"false"%>
     <%= link_to ' Descargar Cotización',  ventum_path(request.parameters.merge({:format => :pdf})), :onclick => "$('#index').submit()","data-role" => "button","data-inline" => "true", "data-theme" => "b", "download"=>"fa-download", "data-ajax"=>"false"%>
     <%= link_to ' Descargar carta de aceptacion',  ventum_path(request.parameters.merge({:format => :adicional})), :onclick => "$('#index').submit()","data-role" => "button","data-inline" => "true", "data-theme" => "b", "download"=>"fa-download", "data-ajax"=>"false"%>
-    <%= link_to "Regresar", venta_path, "data-role" => "button","data-inline"=>"true","data-theme" =>"b"%>
-  </div> 
+    <%= link_to "Regresar", venta_path, "data-role" => "button","data-inline"=>"true","data-theme" =>"b","onclick"=>"reload()"%>
