--- a/app/views/admins/new.html.erb
+++ b/app/views/admins/new.html.erb
@@ -2,6 +2,7 @@
   <h2 class="alert alert-info">
     <strong>Registro de usuario</strong> 
   </h2>
+  <%= link_to 'regresar', admins_path, "data-role" => "button", "data-theme" => "b", "data-inline"=>"true"%> 
   <%= render "form"%>
   <%= link_to 'regresar', admins_path, "data-role" => "button", "data-theme" => "b", "data-inline"=>"true", "class" => "float_right"%> 
 </div>
