--- a/app/views/rols/new.html.erb
+++ b/app/views/rols/new.html.erb
@@ -1,5 +1,9 @@
+
 <div class="col-md-10 col-md-offset-1">
 	<h1 class="alert alert-success" >Nuevo Rol</h1>
+	<div class="col-md-12 nopadding">
+		<%= link_to 'Regresar', rols_path, "data-role" => "button", "data-inline" => "true", "data-theme" => "b"  %>
+	</div>
 	<%= render 'form' %>
-	<%= link_to 'Regresar', rols_path, "data-role" => "button", "data-inline" => "true", "data-theme" => "b"  %>
+
 </div>
