--- a/app/views/admins/edit.html.erb
+++ b/app/views/admins/edit.html.erb
@@ -1,9 +1,10 @@
-<div class="col-md-6 col-md-offset-3">
+  <div class="col-md-6 col-md-offset-3">
   <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
   <h2 class="proyect_name alert alert-info">
-    <strong>usuario</strong> 
+    <strong class="center">Modificar usuario</strong> 
   </h2>
+  <%= link_to ' Regresar', admins_path, "data-role" => "button", "data-theme" => "b", "data-inline"=>"true"%>
   <%= form_for(@user, :url => { :action => "update" } ) do |f| %>
   <div class="field">
     <%= f.label :email , "Correo electronico *"%><br>
@@ -28,7 +29,7 @@
     <%= f.password_field :password_confirmation, autocomplete: "off" ,class: "form-control"%>
   </div>
   <div class="actions">
-    <%= f.submit  "Guardar Datos de usuario" %>
+    <%= f.submit  "Guardar Datos de usuario" , "class"=>"ui-link ui-btn ui-btn-inline ui-shadow ui-corner-all"%>
   </div>
 <% end %>
   <%= link_to 'regresar', admins_path, "data-role" => "button", "data-theme" => "b", "data-inline"=>"true", "class" => "float_right"%> 
