--- a/app/views/admins/index.html.erb
+++ b/app/views/admins/index.html.erb
@@ -6,6 +6,7 @@
   <%= @user%>
   <%end%>
   <%= link_to ' Crear usuario', new_admin_path,  "data-role" => "button", "data-theme" => "b", "data-inline"=>"true" %>
+  <%= link_to ' Regresar', root_path, "data-role" => "button", "data-theme" => "b", "data-inline"=>"true"%>
   <div class="table-responsive">
     <table class="table table-bordered ui-responsive" data-role="table">
     <thead>
