--- a/app/views/producto_padres/new.html.erb
+++ b/app/views/producto_padres/new.html.erb
@@ -1,5 +1,6 @@
 <div class="col-md-10 col-md-offset-1">
+	
 	<h1 class="alert alert-success" >Nueva categoria</h1>
+	<div class="col-md-12 nopadding"><%= link_to 'Regresar', producto_padres_path , "data-role" => "button", "data-inline" => "true", "data-theme" => "b" %></div>
 	<%= render 'form' %>
-	<%= link_to 'Back', producto_padres_path , "data-role" => "button", "data-inline" => "true", "data-theme" => "b" %>
 </div>
