--- a/app/views/producto_padres/show.html.erb
+++ b/app/views/producto_padres/show.html.erb
@@ -51,4 +51,6 @@
     <% end %>
   </tbody>
 </table>
+<%= link_to 'Editar', edit_producto_padre_path(@producto_padre) , "data-role" => "button", "data-inline" => "true", "data-theme" => "b" %>
+<%= link_to 'Regresar', producto_padres_path, "data-role" => "button", "data-inline" => "true", "data-theme" => "b"  %>
 
