--- a/app/views/productos/new.html.erb
+++ b/app/views/productos/new.html.erb
@@ -1,5 +1,6 @@
 <div class="col-md-10 col-md-offset-1">
+	<%= link_to 'Regresar', productos_path, "data-role" => "button", "data-inline" => "true", "data-theme" => "b"  %>
 	<h1 class="alert alert-success" >Producto nuevo</h1>
 	<%= render 'form' %>
-	<%= link_to 'Regresar', productos_path, "data-role" => "button", "data-inline" => "true", "data-theme" => "b"  %>
+	<div class="col-md-12 nopadding">	<%= link_to 'Regresar', productos_path, "data-role" => "button", "data-inline" => "true", "data-theme" => "b"  %></div>
 </div>
