--- a/app/views/xls/subir_archivos.html.erb
+++ b/app/views/xls/subir_archivos.html.erb
@@ -2,7 +2,7 @@
 <p>Es de suma importancia recordar que el xls debe tener la siguiente estructura:<br>
 A - proveedor * B - clave proveedor * C - clave producto * D - Nombre de producto *  E - Precio proveedor * F - Precio S/IVA al publico * G - tiempo de instalacion remotamente en minutos*  H - tiempo de instalacion presencial en minutos *  I - Descripcion de producto(opcional)  </p>
 
-<a href="/dato/ejemplo.xls" download data-role="button" data-inline="true" data-ajax="false">
+<a href="/ejemplo.xls" download data-role="button" data-inline="true" data-ajax="false">
 	Descarga un ejemplo <i class="fa fa-download"></i>
 </a>
 
